v0.1.12: restore _imm API, Chicory compiler investigation, spec.md update